--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mui/material": "^5.14.18",
     "@mui/system": "^5.14.18",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "emailjs": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
