--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/system": "^5.14.18",
+    "@react-pdf/renderer": "^3.1.14",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-use": "^17.4.1"
   },
