--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-pdf/renderer": "^3.1.14",
     "framer-motion": "^11.0.5",
     "gsap": "^3.12.5",
